# quickwit

./: Dockerfile  Makefile
docs/get-started/: installation.md
quickwit-metastore/: Cargo.toml
quickwit-metastore/migrations/postgresql/: 1_create-indexes.up.sql  2_create-splits.up.sql
quickwit-metastore/src/: error.rs  split_metadata.rs  tests.rs
quickwit-metastore/src/metastore/: mod.rs  postgresql_metastore.rs
quickwit-metastore/src/metastore/file_backed_metastore/: mod.rs
